feat: 練習問題がない13章に練習問題を追加
## 追加内容

Chapter 04, 06-17の13章に練習問題と解答を追加しました。

### 追加した章
- Chapter 04: 変数定義（型、optional、validation）
- Chapter 06: テンプレート処理（templatestring、jsonencode）
- Chapter 07: リソースグループ（for_each、tags）
- Chapter 08: 管理グループとポリシー（階層構造、割り当て）
- Chapter 09: 管理リソース（Log Analytics、DCR、Managed Identity）
- Chapter 10: Hub-and-Spoke（Availability Zones、VNet Peering、Bastion）
- Chapter 11: Virtual WAN（Auto Scale、Hub-and-Spoke比較、Sidecar VNet）
- Chapter 12: GitHub Actions（OIDC認証、トリガー、Secrets vs Variables）
- Chapter 13: CI/CDパイプライン（再利用可能ワークフロー、Plan/Apply、Environment Protection）
- Chapter 14: Bootstrap Phase 1（State Storage、Managed Identity、Federated Credential）
- Chapter 15: Bootstrap Phase 2（デプロイ検証、エラー対処、terraform state list）
- Chapter 16: 運用管理の基礎（リソース追加手順、terraform plan vs apply、ポリシー更新）
- Chapter 17: 運用の自動化と効率化（アラート通知、コスト最適化、Scheduled Workflow）

### 練習問題の特徴
- 各章の内容に沿った実践的な問題（3問ずつ）
- カジュアル敬語調を維持
- 詳細な解答（コード例、図表、説明）
- Chapter 01-05と同じ形式で統一

### 修正内容
- 旧整合性レポート2つを削除（DEEP/INTEGRITY）

## ビルドテスト
✅ mkdocs build --strict: 成功（3.10秒）

--- a/docs-site/docs/04_変数定義.md
+++ b/docs-site/docs/04_変数定義.md
@@ -663,6 +663,68 @@ resource "azurerm_firewall" "example" {
 次のChapterでは、`locals.tf`を見ていきます。
 変数を計算・加工するロジックがどうなっているか解説します。
 
+## 練習問題
+
+理解度チェックです。休憩中に考えてみましょう。
+
+### 問題1
+次の変数定義のうち、正しくないものはどれですか？
+
+```hcl
+A. variable "name" { type = string }
+B. variable "count" { type = number, default = 1 }
+C. variable "tags" { type = map(string) }
+```
+
+### 問題2
+`optional`修飾子を使った変数定義で、  
+省略時に空文字列（`""`）がデフォルトになるように書いてください。
+
+### 問題3
+次のvalidation条件は何をチェックしていますか？
+
+```hcl
+validation {
+  condition     = contains(["japaneast", "japanwest"], var.location)
+  error_message = "Invalid location"
+}
+```
+
+---
+
+## 練習問題の答え
+
+### 答え1
+**B が間違い**です。
+
+```hcl
+# ❌ カンマは使わない
+variable "count" { type = number, default = 1 }
+
+# ✅ 正しい書き方
+variable "count" {
+  type    = number
+  default = 1
+}
+```
+
+### 答え2
+```hcl title="optional修飾子でデフォルト値を指定"
+variable "description" {
+  type = object({
+    text = optional(string, "")
+  })
+}
+```
+
+`optional(string, "")`とすることで、省略時に空文字列がデフォルトになります。
+
+### 答え3
+**リージョンが`japaneast`または`japanwest`のみ許可されることをチェック**しています。
+
+`contains(list, value)`で、リストに値が含まれているか確認します。
+含まれていない場合は、`error_message`が表示されます。
+
 ---
 
 **所要時間**: 35分  
