--- a/docs-site/docs/06_設定テンプレート.md
+++ b/docs-site/docs/06_設定テンプレート.md
@@ -786,6 +786,69 @@ vnet_id = "{{rg_id}}/providers/.../virtualNetworks/vnet"
 次のChapterでは、リソースグループの作成を見ていきます。
 実際にAzureリソースを作る最初のステップです。
 
+## 練習問題
+
+理解度チェックです。休憩中に考えてみましょう。
+
+### 問題1
+`starter_location_01 = "japaneast"`のとき、  
+`starter_location_01_short`の値は何になりますか？
+
+### 問題2
+次のテンプレート文字列で、  
+`{{starter_location_01}}`が`japaneast`に置換される処理の名前は何ですか？
+
+```hcl
+name = "rg-management-{{starter_location_01}}"
+```
+
+### 問題3
+`jsonencode()`と`jsondecode()`の使い分けを説明してください。
+
+---
+
+## 練習問題の答え
+
+### 答え1
+**`jp`**になります。
+
+```hcl
+starter_locations_short = {
+  "japaneast"  = "jp"
+  "japanwest"  = "jp"
+  "koreacentral" = "kc"
+  ...
+}
+```
+
+`locals.config.tf`の`starter_locations_short`マップで、  
+`japaneast` → `jp`に変換されます。
+
+### 答え2
+**`templatestring()`関数**です。
+
+```hcl
+templatestring(name, {
+  starter_location_01 = "japaneast"
+})
+```
+
+`{{xxx}}`を実際の値に置換する処理を「テンプレート処理」と呼びます。
+
+### 答え3
+- **`jsonencode()`**：オブジェクト → JSON文字列（文字列化）
+- **`jsondecode()`**：JSON文字列 → オブジェクト（オブジェクト化）
+
+```hcl
+# オブジェクトを文字列にする
+str = jsonencode({ name = "test" })  # '{"name":"test"}'
+
+# 文字列をオブジェクトに戻す
+obj = jsondecode(str)  # { name = "test" }
+```
+
+テンプレート処理では、文字列にしてから置換し、最後にオブジェクトに戻します。
+
 ---
 
 **所要時間**: 50分  
