--- a/docs-site/docs/07_リソースグループ.md
+++ b/docs-site/docs/07_リソースグループ.md
@@ -722,6 +722,65 @@ connectivity_resource_groups = {
 次のChapterでは、管理グループとポリシーの作成を見ていきます。
 ガバナンスの要となる部分です。
 
+## 練習問題
+
+理解度チェックです。休憩中に考えてみましょう。
+
+### 問題1
+このプロジェクトで作成される管理リソースグループの名前は何ですか？  
+（`starter_location_01 = "japaneast"`の場合）
+
+### 問題2
+`for_each = local.resource_groups`を使う理由は何ですか？
+
+### 問題3
+次の設定で、リソースグループに付与されるタグは何ですか？
+
+```hcl
+management_resource_tags = {
+  environment = "prod"
+}
+```
+
+---
+
+## 練習問題の答え
+
+### 答え1
+**`rg-management-jp`**になります。
+
+```hcl
+management_resource_group_name = "rg-management-$${starter_location_01_short}"
+# starter_location_01_short = "jp"
+# 結果: rg-management-jp
+```
+
+### 答え2
+**複数のリソースグループを一度に作成するため**です。
+
+```hcl
+for_each = local.resource_groups
+# {
+#   "rg-management-jp" = {...}
+#   "rg-connectivity-jp" = {...}
+#   ...
+# }
+```
+
+`for_each`を使うことで、mapの要素ごとにリソースを作成できます。
+
+### 答え3
+**`environment = "prod"`が付与されます。**
+
+```hcl
+tags = {
+  environment = "prod"
+}
+```
+
+`management_resource_tags`に設定した値が、  
+そのままリソースグループの`tags`として設定されます。
+
 ---
 
 **所要時間**: 40分  
