--- a/docs-site/docs/09_管理リソース.md
+++ b/docs-site/docs/09_管理リソース.md
@@ -904,6 +904,78 @@ log_analytics_workspace_daily_quota_gb = 10
 次のChapterでは、Hub-and-Spokeネットワークの構築を見ていきます。
 実際のネットワークリソース（VNet、Firewall、Bastion）を作るよ。
 
+## 練習問題
+
+理解度チェックです。休憩中に考えてみましょう。
+
+### 問題1
+Log Analyticsワークスペースのデータ保持期間を90日に設定するには、  
+どのプロパティをどう設定しますか？
+
+### 問題2
+Data Collection Rule（DCR）の役割は何ですか？
+
+### 問題3
+User Assigned Managed Identityを使う理由は何ですか？
+
+---
+
+## 練習問題の答え
+
+### 答え1
+**`retention_in_days = 90`**を設定します。
+
+```hcl title="Log Analyticsの保持期間設定"
+resource "azurerm_log_analytics_workspace" "management" {
+  name                = "log-management-jp"
+  location            = "japaneast"
+  resource_group_name = azurerm_resource_group.management.name
+  sku                 = "PerGB2018"
+  retention_in_days   = 90  # ← これ
+}
+```
+
+### 答え2
+**VMからLog Analyticsへ送信するログの種類とフィルタリングルールを定義**します。
+
+```
+VM → DCR（フィルタリング）→ Log Analytics
+```
+
+DCRで以下を設定：
+- どのログを収集するか（Performance、Syslog等）
+- どのLog Analyticsに送るか
+- データの変換ルール
+
+### 答え3
+**複数のリソースから同じIDを共有して使えるから**です。
+
+```hcl
+# System Assigned（リソースごとに1つ）
+resource "azurerm_virtual_machine" "vm1" {
+  identity { type = "SystemAssigned" }  # VM1専用のID
+}
+
+# User Assigned（共有可能）
+resource "azurerm_user_assigned_identity" "shared" {
+  name = "id-shared"
+}
+
+resource "azurerm_virtual_machine" "vm1" {
+  identity {
+    type         = "UserAssigned"
+    identity_ids = [azurerm_user_assigned_identity.shared.id]  # 共有
+  }
+}
+
+resource "azurerm_virtual_machine" "vm2" {
+  identity {
+    type         = "UserAssigned"
+    identity_ids = [azurerm_user_assigned_identity.shared.id]  # 同じID
+  }
+}
+```
+
 ---
 
 **所要時間**: 45分  
