--- a/docs-site/docs/16_運用管理の基礎.md
+++ b/docs-site/docs/16_運用管理の基礎.md
@@ -1291,5 +1291,113 @@ PRで実行されるPlanを確認します。
 
 次の章では、運用の自動化と効率化について学びます。
 
+## 練習問題
+
+理解度チェックです。休憩中に考えてみましょう。
+
+### 問題1
+新しいリソースグループを追加する際の正しい手順は何ですか？
+
+### 問題2
+`terraform plan`と`terraform apply`の違いは何ですか？
+
+### 問題3
+ポリシー定義を更新する際に注意すべきことは何ですか？
+
+---
+
+## 練習問題の答え
+
+### 答え1
+正しい手順:
+
+1. **ブランチ作成**
+   ```bash
+   git checkout -b feature/add-resource-group
+   ```
+
+2. **tfvarsファイル編集**
+   ```hcl
+   resource_group_config = {
+     # 既存のRG
+     "rg-management-jp" = { ... }
+     
+     # 新しいRG
+     "rg-app-jp" = {
+       location = "japaneast"
+       tags = {
+         environment = "prod"
+         application = "myapp"
+       }
+     }
+   }
+   ```
+
+3. **ローカルでplan確認**
+   ```bash
+   terraform plan
+   ```
+
+4. **Pull Request作成**
+   ```bash
+   git add .
+   git commit -m "feat: Add app resource group"
+   git push origin feature/add-resource-group
+   ```
+
+5. **レビュー承認後、マージ**
+
+6. **GitHub Actionsで自動デプロイ**
+
+### 答え2
+
+| コマンド | 動作 | 実行結果 |
+|----------|------|----------|
+| `terraform plan` | **変更内容のプレビュー** | リソースは変更されない |
+| `terraform apply` | **実際に変更を適用** | リソースが作成・変更・削除される |
+
+**planの出力例:**
+```
+Terraform will perform the following actions:
+
+  # azurerm_resource_group.app will be created
+  + resource "azurerm_resource_group" "app" {
+      + name     = "rg-app-jp"
+      + location = "japaneast"
+    }
+
+Plan: 1 to add, 0 to change, 0 to destroy.
+```
+
+**必ずplanで確認してからapply**しましょう。
+
+### 答え3
+
+1. **既存リソースへの影響を確認**
+   ```bash
+   terraform plan
+   ```
+   ポリシー更新が既存リソースに影響する場合、Non-compliantになる可能性があります。
+
+2. **段階的なロールアウト**
+   ```
+   1. まず監査モード（audit）で実施
+   2. Non-compliant リソースを確認
+   3. 修正後、強制モード（deny）に変更
+   ```
+
+3. **除外設定の確認**
+   ```hcl
+   not_scopes = [
+     "/subscriptions/xxx/resourceGroups/rg-exception"
+   ]
+   ```
+   特定のリソースをポリシーから除外できます。
+
+4. **ドキュメント更新**
+   - ポリシー変更の理由
+   - 影響範囲
+   - ロールバック手順
+
 !!! tip "次の章へ"
     [Chapter 17: 運用の自動化と効率化](17_運用の自動化と効率化.md)で、自動化やモニタリングを学びます。
