--- a/docs-site/docs/17_運用の自動化と効率化.md
+++ b/docs-site/docs/17_運用の自動化と効率化.md
@@ -1369,6 +1369,117 @@ Infrastructure as Codeのベストプラクティスです。
 - ドキュメントのメンテナンス
 - 定期レビューの実施
 
+## 練習問題
+
+理解度チェックです。休憩中に考えてみましょう。
+
+### 問題1
+Azure Monitorでアラートを設定する際、  
+通知先として設定できるものは何ですか？（3つ答えてください）
+
+### 問題2
+コスト最適化のために確認すべきリソースは何ですか？
+
+### 問題3
+Scheduled Workflowを使って自動化できる運用タスクを2つ挙げてください。
+
+---
+
+## 練習問題の答え
+
+### 答え1
+1. **Email**（メール通知）
+2. **Logic Apps**（カスタムワークフロー）
+3. **Webhook**（Slack、Teams等への通知）
+
+その他:
+- **SMS**（テキストメッセージ）
+- **Voice**（音声通話）
+- **Azure Mobile App**（モバイル通知）
+
+設定例:
+```hcl
+resource "azurerm_monitor_action_group" "alerts" {
+  name                = "action-group-alerts"
+  resource_group_name = azurerm_resource_group.management.name
+  short_name          = "alerts"
+
+  email_receiver {
+    name          = "admin"
+    email_address = "admin@example.com"
+  }
+
+  webhook_receiver {
+    name        = "slack"
+    service_uri = "https://hooks.slack.com/services/xxx"
+  }
+}
+```
+
+### 答え2
+
+1. **使われていないリソース**
+   - 削除し忘れたVM、Disk
+   - 未割り当てのPublic IP
+   - 未使用のStorage Account
+
+2. **過剰スペックのリソース**
+   - VM サイズ（Standard_D16s → Standard_D4s）
+   - Log Analytics 保持期間（365日 → 90日）
+   - Firewall SKU（Premium → Standard）
+
+3. **予約インスタンスで割引可能なリソース**
+   - 長期運用のVM
+   - Log Analytics Commitment Tier
+
+Azure Cost Management + Billingで確認:
+```
+Cost analysis → Resource → 最もコストがかかっているリソース
+Advisor → Cost recommendations → コスト削減の推奨事項
+```
+
+### 答え3
+
+1. **定期的なコンプライアンスチェック**
+   ```yaml
+   on:
+     schedule:
+       - cron: '0 9 * * 1'  # 毎週月曜 9時
+   
+   jobs:
+     compliance:
+       runs-on: ubuntu-latest
+       steps:
+         - name: Check Policy Compliance
+           run: |
+             az policy state list --resource-group rg-management-jp
+   ```
+
+2. **未使用リソースのレポート生成**
+   ```yaml
+   on:
+     schedule:
+       - cron: '0 0 1 * *'  # 毎月1日 0時
+   
+   jobs:
+     unused-resources:
+       runs-on: ubuntu-latest
+       steps:
+         - name: List unused resources
+           run: |
+             # 未割り当てのPublic IP
+             az network public-ip list --query "[?ipConfiguration==null]"
+             
+             # 停止中のVM
+             az vm list --query "[?powerState=='VM stopped']"
+   ```
+
+その他の例:
+- State Lockの自動解除
+- ログのアーカイブ
+- セキュリティスキャン
+- バックアップ検証
+
 !!! success "教科書完了"
     お疲れ様でした！これでAzure Landing Zonesの構築から運用まで、すべてを学びました。
     
