--- a/docs-site/docs/08_管理グループとポリシー.md
+++ b/docs-site/docs/08_管理グループとポリシー.md
@@ -877,6 +877,78 @@ alz
 次のChapterでは、管理リソース（Log Analytics、DCR、Managed Identity）の作成を見ていきます。
 監視とログ収集の基盤です。
 
+## 練習問題
+
+理解度チェックです。休憩中に考えてみましょう。
+
+### 問題1
+Azure Landing Zonesの管理グループ階層で、  
+最上位の管理グループは何ですか？
+
+### 問題2
+`azurerm_management_group_policy_assignment`リソースで、  
+ポリシーを割り当てる対象を指定するプロパティは何ですか？
+
+### 問題3
+次のうち、Azure Landing Zonesの標準管理グループはどれですか？
+
+```
+A. platform
+B. production
+C. connectivity
+D. testing
+```
+
+---
+
+## 練習問題の答え
+
+### 答え1
+**`root`管理グループ**です。
+
+```
+root（contoso）
+├─ platform
+│  ├─ management
+│  ├─ connectivity
+│  └─ identity
+└─ landingzones
+   ├─ corp
+   └─ online
+```
+
+`root_id = "contoso"`で指定した名前がルート管理グループになります。
+
+### 答え2
+**`management_group_id`プロパティ**です。
+
+```hcl
+resource "azurerm_management_group_policy_assignment" "example" {
+  name                 = "policy-assignment"
+  policy_definition_id = "..."
+  management_group_id  = azurerm_management_group.root.id  # ← これ
+}
+```
+
+どの管理グループにポリシーを割り当てるかを指定します。
+
+### 答え3
+**A（platform）とC（connectivity）**が正解です。
+
+```
+標準管理グループ:
+- root
+- platform（管理用）
+  - management
+  - connectivity  ← これも標準
+  - identity
+- landingzones
+  - corp
+  - online
+```
+
+B（production）とD（testing）は標準には含まれません。
+
 ---
 
 **所要時間**: 50分  
