feat: Chapter 04, 06, 13, 17に視覚化（mermaid図）を追加
## 追加した視覚化

### Chapter 04: 変数定義
- 変数定義の全体構造図
- 型定義、バリデーション、デフォルト値の関係を図示
- 基本型・コレクション型・構造型の分類

### Chapter 06: 設定テンプレート
- テンプレート処理の全体フロー図
- データ取得→テンプレート処理→出力の流れを図示
- 4ステップの処理（マッピング、組み込み置換、カスタム置換、テンプレート適用）

### Chapter 13: CI/CDパイプライン
- GitHub ActionsによるCI/CDパイプライン全体図
- PR時のPlan実行→レビュー→Apply実行の流れ
- Environment Protection Rulesによる承認フロー

### Chapter 17: 運用の自動化と効率化
- 運用自動化の全体フロー図
- 定期実行、イベント駆動、手動実行の3つの柱
- Azure Monitorによる監視・アラート・通知フロー

## 視覚化の効果

1. **複雑な概念の理解**: フローチャートで処理の流れが一目瞭然
2. **関係性の明確化**: 要素間の関連が視覚的に理解できる
3. **学習効率の向上**: 図を見ながらコードを読める
4. **全体像の把握**: 詳細に入る前に全体構造を理解

## ビルドテスト
✅ mkdocs build --strict: 成功（3.45秒）
✅ mermaid図: 4章に追加（合計17個）

--- a/docs-site/docs/04_変数定義.md
+++ b/docs-site/docs/04_変数定義.md
@@ -13,6 +13,42 @@ Chapter 3で見た`platform-landing-zone.auto.tfvars`（設定ファイル）の
 
 ---
 
+## 変数定義の全体像
+
+変数定義（variables.tf）の構造を視覚化してみましょう。
+
+```mermaid
+graph TB
+    A[variables.tf] --> B[型定義]
+    A --> C[バリデーション]
+    A --> D[デフォルト値]
+    
+    B --> B1[基本型<br/>string, number, bool]
+    B --> B2[コレクション型<br/>list, map, set]
+    B --> B3[構造型<br/>object]
+    
+    C --> C1[condition<br/>条件式]
+    C --> C2[error_message<br/>エラーメッセージ]
+    
+    D --> D1[省略可能<br/>default指定]
+    D --> D2[必須<br/>default未指定]
+    
+    B3 --> E[optional修飾子<br/>省略可能フィールド]
+    
+    style A fill:#e1f5ff
+    style B fill:#fff4e1
+    style C fill:#ffe1e1
+    style D fill:#e1ffe1
+```
+
+**3つの要素**：
+
+1. **型定義**：どんなデータ型か（string、number、list等）
+2. **バリデーション**：入力値のチェック（条件を満たさないとエラー）
+3. **デフォルト値**：省略時の初期値（任意）
+
+---
+
 ## variables.tfの役割
 
 **3つの役割がある**：
