--- a/docs-site/docs/06_設定テンプレート.md
+++ b/docs-site/docs/06_設定テンプレート.md
@@ -15,6 +15,44 @@
 
 ---
 
+## テンプレート処理の全体フロー
+
+config-templatingモジュールの処理の流れを視覚化してみましょう。
+
+```mermaid
+graph TB
+    A[入力: platform-landing-zone.auto.tfvars] --> B[variables.tf<br/>入力変数の受け取り]
+    
+    B --> C[data.tf<br/>Azureリージョン情報取得]
+    B --> D[locals.config.tf<br/>テンプレート処理]
+    
+    C --> C1[regions モジュール<br/>geo_code, short_name]
+    C --> C2[azurerm_client_config<br/>tenant_id等]
+    
+    D --> D1[ステップ1: リージョンマッピング<br/>starter_locations_short]
+    D1 --> D2[ステップ2: 組み込み置換作成<br/>built_in_replacements]
+    D2 --> D3[ステップ3: カスタム置換処理<br/>custom_replacements]
+    D3 --> D4[ステップ4: テンプレート適用<br/>templatestring]
+    
+    D4 --> E[outputs.tf<br/>処理済み設定を出力]
+    
+    E --> F[出力: 置換完了した設定]
+    
+    style A fill:#e1f5ff
+    style F fill:#e1ffe1
+    style D fill:#fff4e1
+    style D4 fill:#ffe1e1
+```
+
+**処理の流れ**：
+
+1. **入力受け取り**：tfvarsファイルから設定を取得
+2. **データ取得**：Azureリージョン情報を取得
+3. **テンプレート処理**：`{{xxx}}`を実際の値に置換
+4. **結果出力**：置換完了した設定を返す
+
+---
+
 ## モジュールの構成
 
 ```title="modules/config-templating/のファイル構成"
