--- a/docs-site/docs/17_運用の自動化と効率化.md
+++ b/docs-site/docs/17_運用の自動化と効率化.md
@@ -12,6 +12,73 @@
 
 ---
 
+## 運用自動化の全体像
+
+Landing Zonesの運用自動化の流れを視覚化してみましょう。
+
+```mermaid
+graph TB
+    A[運用タスク] --> B[定期実行<br/>Scheduled Workflow]
+    A --> C[イベント駆動<br/>Event-driven]
+    A --> D[手動実行<br/>Manual Trigger]
+    
+    B --> B1[毎日: コンプライアンスチェック]
+    B --> B2[毎週: コスト分析レポート]
+    B --> B3[毎月: セキュリティスキャン]
+    
+    C --> C1[PR作成: Plan自動実行]
+    C --> C2[マージ: Apply自動実行]
+    C --> C3[リソース作成: アラート送信]
+    
+    D --> D1[緊急変更: 手動Apply]
+    D --> D2[ロールバック: 手動実行]
+    
+    B1 --> E[Azure Monitor]
+    B2 --> E
+    B3 --> E
+    C3 --> E
+    
+    E --> F[アラート評価]
+    F --> G{閾値超過?}
+    
+    G -->|Yes| H[Action Group起動]
+    G -->|No| I[正常: 記録のみ]
+    
+    H --> H1[Email通知]
+    H --> H2[Slack/Teams通知]
+    H --> H3[Logic Apps実行]
+    H --> H4[Webhook呼び出し]
+    
+    H1 --> J[管理者: 対応]
+    H2 --> J
+    H3 --> J
+    H4 --> J
+    
+    J --> K[問題解決]
+    K --> L[ログ記録・ドキュメント更新]
+    
+    style A fill:#e1f5ff
+    style E fill:#fff4e1
+    style G fill:#ffe1e1
+    style J fill:#ffebe1
+    style L fill:#e1ffe1
+```
+
+**自動化の3つの柱**：
+
+1. **定期実行**: Scheduled Workflowで定期的にチェック
+2. **イベント駆動**: Git操作やリソース変更で自動実行
+3. **監視・アラート**: Azure Monitorで異常を検知
+
+**通知フロー**：
+
+1. Azure Monitorが異常を検知
+2. Action Groupが複数の通知先に送信
+3. 管理者が対応
+4. 解決後、ドキュメントを更新
+
+---
+
 ## Part 1: 運用自動化の設計
 
 ### 自動化すべきタスクの選定
