--- a/docs-site/docs/00_はじめに.md
+++ b/docs-site/docs/00_はじめに.md
@@ -4,7 +4,7 @@
 
 ### 📚 学習スタイル
 
-この教科書は、**実際のコードを見ながら読む**ことを強く推奨します。
+この教科書は、実際のコードを見ながら読むことを強く推奨します。
 
 !!! tip "推奨: GitHubで見る"
     教科書を読みながら、ブラウザで https://github.com/shuhei0720org01/alz-mgmt を開いておきましょう。
@@ -13,37 +13,22 @@
     - コードを検索できる
     - ファイルをクリックすれば開ける
 
-!!! warning "このリポジトリをクローンしないでください"
-    このリポジトリは**学習用のコード例**です。クローンしても実行できません。
-    
-    実際にデプロイしたい場合は、[Chapter 14: Bootstrap Phase 1](./14_Bootstrap_Phase_1.md)から始めてください。
-    Bootstrap完了後、あなた専用のリポジトリが作成されます。
 
 ### 📖 読み方
 
-1. **教科書を読む**
-   - Webサイトまたは`docs/`フォルダのマークダウン
-   
-2. **コードを確認する**
-   - 教科書で具体的なファイル名（`platform-landing-zone.auto.tfvars`など）が出てきたら、GitHubまたはVSCodeでそのファイルを開く
-   
-3. **コードを理解する**（重要）
-   - コードの構造や設定値を確認する
-   - コメントを読んで設計意図を理解する
-   - 他のファイルとの関係性を把握する
+**1. 教科書を読む**
 
-!!! warning "このリポジトリについて注意"
-    **このリポジトリは完成済みのコード例です。**
-    
-    - ✅ **学習用**: コードを読んで構造を理解する教材として使う
-    - ❌ **デプロイ用ではない**: このリポジトリをクローンしても実行できません
-    
-    **実際にAzure Landing Zonesをデプロイしたい場合**:
-    
-    1. [Chapter 14: Bootstrap Phase 1](./14_Bootstrap_Phase_1.md)から始めてください
-    2. Azure公式のBootstrap手順に従って、最初から環境を構築します
-    3. Bootstrap完了後、あなた専用のリポジトリが作成されます
-    4. そのリポジトリがこのコード例のような構造になります
+- Webサイトまたは`docs/`フォルダのマークダウン
+
+**2. コードを確認する**
+
+- 教科書で具体的なファイル名（`platform-landing-zone.auto.tfvars`など）が出てきたら、GitHubまたはVSCodeでそのファイルを開く
+
+**3. コードを理解する**（重要）
+
+- コードの構造や設定値を確認する
+- コメントを読んで設計意図を理解する
+- 他のファイルとの関係性を把握する
 
 ---
 
@@ -52,7 +37,7 @@
 このプロジェクトは、**Azure Landing Zones**（アジュール・ランディングゾーンズ）という、  
 企業向けのAzure環境を構築するためのTerraformコードです。
 
-「Landing Zone」は飛行機の着陸帯？って意味です。
+「Landing Zone」は飛行機の着陸帯って意味です。
 実際、そのイメージで合っていて、
 
 飛行機が安全に着陸するためには、滑走路だけじゃなくて：
@@ -169,16 +154,18 @@ alz-mgmt/
 
 このプロジェクト、ファイル名が規則的です：
 
-- `main.*.tf`: メインの処理。`*`の部分が役割を表す
-  - `main.connectivity.hub.and.spoke.virtual.network.tf` → ハブスポークネットワーク
-  - `main.management.tf` → 管理グループ
-  - `main.resource.groups.tf` → リソースグループ
+**`main.*.tf`: メインの処理**（`*`の部分が役割を表す）
 
-- `variables.*.tf`: 変数定義。`*`の部分が対象を表す
-  - `variables.connectivity.tf` → ネットワーク関連の変数
-  - `variables.management.tf` → 管理関連の変数
+- `main.connectivity.hub.and.spoke.virtual.network.tf` → ハブスポークネットワーク
+- `main.management.tf` → 管理グループ
+- `main.resource.groups.tf` → リソースグループ
 
-- `*.auto.tfvars`: 自動で読み込まれる設定ファイル
+**`variables.*.tf`: 変数定義**（`*`の部分が対象を表す）
+
+- `variables.connectivity.tf` → ネットワーク関連の変数
+- `variables.management.tf` → 管理関連の変数
+
+**`*.auto.tfvars`: 自動で読み込まれる設定ファイル**
 
 ## データの流れ
 
@@ -237,8 +224,8 @@ alz-mgmt/
 ## 所要時間とコスト
 
 ### 構築時間
-- 初回実行: 約15〜20分
-- 削除: 約10〜15分
+- 初回実行: 約60分
+- 削除: 約60分
 
 ### 月額コスト（概算）
 
@@ -343,8 +330,6 @@ alz-mgmt/
 ### 問題2
 なぜこのプロジェクトではTerraformを使っているのですか？
 
-### 問題3
-どのChapterから読むべきか、初心者と経験者それぞれの学習ルートを説明してください。
 
 ---
 
@@ -366,16 +351,6 @@ Terraformを使う理由：
 - マルチクラウド対応: Azure以外のクラウドでも使える知識
 - モジュール化: 再利用可能な部品として管理できる
 
-### 答え3
-**初心者ルート**:
-
-- Chapter 00（全体像）→ Chapter 01（基礎知識）→ Chapter 02（構造）→ Chapter 14（Bootstrap Phase 1）
-- 基礎から順番に読んで、まず動かしてみることが重要
-
-**経験者ルート**:
-
-- Chapter 00（全体像）→ Chapter 03（設定ファイル）→ Chapter 14-15（Bootstrap実践）
-- 設定ファイルを理解すれば、すぐにデプロイできる
 
 ---
 
