fix: Chapter 01 - リスト番号の連番問題を修正
- 「なぜこう分けるか？」セクションのリスト番号が1-11になる問題を修正
- 番号付きリストを見出し+箇条書きの形式に変更
- 各セクション間の空行を適切に調整
- その他、細かい空行の追加とテキスト修正

--- a/docs-site/docs/01_基礎知識.md
+++ b/docs-site/docs/01_基礎知識.md
@@ -258,7 +258,7 @@ Azure AD（認証の大元）
 
 特徴：
 
-- 同じリージョンでなくてもOK
+- 同じリージョンでなくてもOK（リソースグループのリージョンと中のリソースのリージョンは揃えてね）
 - まとめて削除できる
 - まとめて権限管理できる
 
@@ -319,7 +319,7 @@ Azureの「会社のルール」を強制する仕組み。
    ルールそのもの。「こうしなさい」「これダメ」
 
 2. **Policy Set Definition**（ポリシーセット定義）  
-   複数のポリシーをまとめたもの。「セキュリティ基準セット」とか。
+   複数のポリシーをまとめたもの。「セキュリティ基準セット」とか。イニシアティブともいう。
 
 3. **Policy Assignment**（ポリシー割り当て）  
    管理グループやサブスクリプションに適用する。
@@ -408,13 +408,15 @@ ABC株式会社
 - 複数サブスクリプションに対応可能
 
 **よくある質問：**
+
 - Q: 複数テナント作れる？
 
-- A: 作れるけど、1社1テナントが基本。M&Aとかで増えることはある。
+- A: 作れるけど、1社1テナントを強く推奨します。理由は後からテナントをまとめるのがすごく大変だからです。あと、entra ID P2のライセンスが二重でかかったり、DefenderやAzureポリシーのガバナンスが分かれちゃったり。
 
 #### 2. Identity and Access Management（ID・アクセス管理）
 
 **何を決めるか？**
+
 - 誰が何をできるか（RBAC）
 - どうやってログインするか（MFA、Conditional Access）
 - サービスアカウントの管理
@@ -438,11 +440,13 @@ ABC株式会社
 ```
 
 **このプロジェクトでは：**
+
 - 管理グループレベルでRBAC設定
 - Managed Identity推奨（パスワード不要）
 - ポリシーで危険な操作を制限
 
 **ベストプラクティス：**
+
 - 本番環境への手動操作は最小限に
 - MFA（多要素認証）は必須
 - 定期的に権限を棚卸し
@@ -478,21 +482,26 @@ Root Management Group
 
 **なぜこう分けるか？**
 
-1. **Platform（基盤）は分離**
-   - 「インフラチーム」が管理
-   - アプリ開発者は触らせない
-   - 全社で共有（Firewall、監視等）
+**1. Platform（基盤）は分離**
 
-2. **Landing Zones（アプリ用）はさらに分ける**
-   - **Corp**: 社内専用（VPN経由のみ）
-   - **Online**: インターネット公開（Firewall必須）
-   - **Sandbox**: 実験用（コスト制限、自動削除）
+- 「インフラチーム」が管理
+- アプリ開発者は触らせない
+- 全社で共有（Firewall、監視等）
 
-3. **サブスクリプションで予算管理**
-   - 1サブスクリプション = 1請求単位
-   - 「今月このアプリいくら使った？」が見える
+**2. Landing Zones（アプリ用）はさらに分ける**
+
+- **Corp**: 社内専用（VPN経由のみ）
+- **Online**: インターネット公開（Firewall必須）
+- **Sandbox**: 実験用（コスト制限、自動削除）
+
+**3. サブスクリプションで予算管理**
+
+- 1サブスクリプション = 1請求単位
+- 「今月このアプリいくら使った？」が見える
 
 **命名規則の例：**
+
+
 
 ```
 リソースグループ:
@@ -505,6 +514,7 @@ rg-{用途}-{環境}-{リージョン}
 ```
 
 **このプロジェクトでは：**
+
 - Terraformで自動命名
 - テンプレート変数で一括管理
 - 全リソースに必須タグ（environment, cost-center等）
@@ -512,6 +522,7 @@ rg-{用途}-{環境}-{リージョン}
 #### 4. Network Topology and Connectivity（ネットワーク）
 
 **何を決めるか？**
+
 - ネットワーク構成（Hub-Spoke or Virtual WAN）
 - オンプレミスとの接続方法
 - IPアドレス設計
