fix: Chapter 01-02 手動修正内容を保存
- Chapter 01: リスト番号問題の修正とその他の調整
- Chapter 02: 手動で修正した内容を保存

--- a/docs-site/docs/02_プロジェクト構造.md
+++ b/docs-site/docs/02_プロジェクト構造.md
@@ -54,19 +54,17 @@ alz-mgmt/
 │           └── cd.yaml                    ← GitHub Actions設定
 │
 └── 📖 ドキュメント
-    ├── README.md                          ← 元の説明書
-    ├── README_STORY.md                    ← ストーリー版説明書
+    ├── README.md                          ← 説明書
     └── docs/                              ← このフォルダ（教科書）
 ```
 
-## ファイル数とコード量
+## ファイル数
 
 全体で：
 
 - Terraformファイル: 約20個
 - モジュール内ファイル: 約10個
 - YAMLファイル: 約10個
-- 総コード行数: 約3,000行
 
 一見多そうですが、実は整理されています。
 
@@ -75,34 +73,34 @@ alz-mgmt/
 ```text title="データの流れ"
 【設定層】
 platform-landing-zone.auto.tfvars ←─┐ あなたが編集
-terraform.tfvars.json            ←─┤ する部分
+terraform.tfvars.json             ←─┤ する部分
                                     │
-        ↓ 読み込み                  │
+        ↓ 読み込み                   │
                                     │
-【変数定義層】                      │
+【変数定義層】                       │
 variables.tf                        │
 variables.*.tf                      │
         ↓                           │
                                     │
-【加工層】                          │
-locals.tf ← 計算・変換              │
+【加工層】                           │
+locals.tf ← 計算・変換               │
         ↓                           │
                                     │
-【処理層】                          │
-main.*.tf ← 実際の処理              │
+【処理層】                           │
+main.*.tf ← 実際の処理               │
         ↓                           │
         ├→ modules/config-templating  ← 設定の加工
         ├→ modules/management_groups  ← 管理グループ作成
         └→ modules/management_resources ← リソース作成
                 ↓                   │
                                     │
-【出力層】                          │
-outputs.tf ← 作成結果               │
+【出力層】                           │
+outputs.tf ← 作成結果                │
         ↓                           │
         表示・他のTerraformで利用    │
                                     │
         ↓                           │
-【定義ファイル】                    │
+【定義ファイル】                     │
 lib/archetype_definitions/ ←───────┘ ポリシー定義
 lib/architecture_definitions/        階層定義
 ```
@@ -147,6 +145,8 @@ lib/architecture_definitions/        階層定義
 
 ## Part 1: 設定ファイルたち
 
+ここからは実際に設定ファイルを手元で開いてみてね！
+
 ### platform-landing-zone.auto.tfvars
 
 **役割**: このプロジェクトのメイン設定ファイル  
@@ -167,6 +167,7 @@ custom_replacements = {
 このファイルだけ編集すれば、ほとんどの設定が変更できます。
 
 **なぜ`.auto.tfvars`？**
+
 - `.tfvars`だと`terraform apply -var-file=xxx.tfvars`って指定が必要
 - `.auto.tfvars`は自動で読み込まれる
 - 楽だから`.auto`をつけてる
@@ -188,6 +189,7 @@ custom_replacements = {
 ```
 
 **なぜJSON形式？**
+
 - HCLより機械的に生成しやすい
 - CI/CDで動的に作りやすい
 
@@ -228,6 +230,7 @@ Terraform 1.12.x じゃないと動かない宣言。
 使うプロバイダーのバージョン指定。
 
 **なぜ`~> 4.0`？**
+
 - `~>` = 互換性のある範囲でバージョンアップOK
 - `4.0` = 4.0.x, 4.1.x, 4.99.x はOK、5.0.x はNG
 - バグ修正は受け取りたいけど、破壊的変更は避けたい
@@ -335,6 +338,7 @@ variable "hub_and_spoke_vnet_settings" {
 ```
 
 **なぜファイルを分けてる？**
+
 - 1ファイルだと長すぎる（1000行超える）
 - 役割ごとに分けた方が見やすい
 - ネットワーク担当者は`variables.connectivity.tf`だけ見ればいい
@@ -440,11 +444,13 @@ DRY原則（Don't Repeat Yourself）ですね。
 - `main.connectivity.virtual.wan.tf` → Virtual WAN
 
 **なぜ分けてる？**
+
 - 1ファイルだと巨大すぎる
 - 役割ごとに分けると見やすい
 - 並行作業しやすい（別の人が別のファイルを編集）
 
 **Terraformの読み込み順**
+
 実は順番は関係ない！  
 Terraformが依存関係を解析して、自動で順序を決めてくれます。
 
@@ -613,6 +619,7 @@ output "hub_virtual_network_id" {
 ```
 
 **なぜ出力する？**
+
 - 他のTerraformプロジェクトで使う
 - デバッグ用
 - ドキュメント生成用
