fix: Chapter 02 - 設定ファイルを実際のファイル内容に合わせて修正
- platform-landing-zone.auto.tfvars: 実際のファイル構造とコメントを反映
- terraform.tfvars.json: 実際のファイル内容に完全一致
- terraform.tf: azapiとlocalプロバイダーを追加
- required_providers の説明を詳細化

--- a/docs-site/docs/02_プロジェクト構造.md
+++ b/docs-site/docs/02_プロジェクト構造.md
@@ -153,18 +153,49 @@ lib/architecture_definitions/        階層定義
 **編集**: ✅ あなたが編集する  
 **重要度**: ★★★★★
 
-```hcl title="platform-landing-zone.auto.tfvars"
+```hcl title="platform-landing-zone.auto.tfvars（冒頭部分）"
+/*
+--- Built-in Replacements ---
+This file contains built-in replacements to avoid repeating the same hard-coded values.
+Replacements are denoted by the dollar-dollar curly braces token (e.g. $${starter_location_01}).
+*/
+
+/*
+--- Starter Locations ---
+You can define the Azure regions to use throughout the configuration.
+*/
 starter_locations = ["japaneast", "japanwest"]
 
+/*
+--- Custom Replacements ---
+You can define custom replacements to use throughout the configuration.
+*/
 custom_replacements = {
   names = {
-    primary_firewall_enabled = true
-    # ...500行くらい続く
+    # Defender email security contact
+    defender_email_security_contact = "shuhei_0720@icloud.com"
+
+    # Resource group names
+    management_resource_group_name                 = "rg-management-$${starter_location_01}"
+    connectivity_hub_primary_resource_group_name   = "rg-hub-$${starter_location_01}"
+    connectivity_hub_secondary_resource_group_name = "rg-hub-$${starter_location_02}"
+    
+    # Resource provisioning primary connectivity
+    primary_firewall_enabled                      = true
+    primary_virtual_network_gateway_vpn_enabled   = true
+    primary_bastion_enabled                       = true
+    # ...500行以上続く
   }
 }
 ```
 
 このファイルだけ編集すれば、ほとんどの設定が変更できます。
+
+**重要なポイント：**
+
+- `$${starter_location_01}`のような変数展開が使える（テンプレート機能）
+- リソース名、リソースグループ名を一括定義
+- どのリソースを有効/無効にするかもここで設定
 
 **なぜ`.auto.tfvars`？**
 
@@ -174,17 +205,29 @@ custom_replacements = {
 
 ### terraform.tfvars.json
 
-**役割**: 秘密情報（サブスクリプションIDとか）  
+**役割**: サブスクリプションIDや各種設定  
 **編集**: ✅ 最初だけ編集する  
 **重要度**: ★★★★☆
 
-```json title="terraform.tfvars.json"
+```json title="terraform.tfvars.json（実際のファイル）"
 {
+  "connectivity_tags": null,
+  "management_groups_enabled": true,
+  "management_resources_enabled": true,
+  "private_link_private_dns_zone_virtual_network_link_moved_blocks_enabled": false,
+  "root_parent_management_group_id": "あなたのテナントルートMG ID",
+  "starter_locations_short": {},
+  "subscription_id_connectivity": null,
+  "subscription_id_identity": null,
+  "subscription_id_management": null,
   "subscription_ids": {
     "management": "あなたのサブスクリプションID",
+    "identity": "あなたのサブスクリプションID",
     "connectivity": "あなたのサブスクリプションID",
-    "identity": "あなたのサブスクリプションID"
-  }
+    "security": "あなたのサブスクリプションID"
+  },
+  "virtual_hubs": {},
+  "virtual_wan_settings": {}
 }
 ```
 
@@ -192,8 +235,21 @@ custom_replacements = {
 
 - HCLより機械的に生成しやすい
 - CI/CDで動的に作りやすい
+- 複数の設定を1つのファイルにまとめられる
 
-**注意**: `.gitignore`に入ってる（Gitにコミットされない）
+
+**主要な設定項目：**
+
+- `subscription_ids`: 新形式のサブスクリプションID指定（map形式）
+- `subscription_id_*`: 旧形式（後方互換性のため残っている、通常はnull）
+- `root_parent_management_group_id`: 管理グループ階層の親となるMG ID
+- `management_groups_enabled`: 管理グループを作成するか（true/false）
+- `management_resources_enabled`: 管理リソース（Log Analyticsなど）を作成するか
+- `starter_locations_short`: リージョンの短縮名をカスタマイズする場合（通常は空）
+- `connectivity_tags`: 接続リソース用の追加タグ（通常はnull）
+- `virtual_hubs`: Virtual WAN使用時のHub設定（通常は空）
+- `virtual_wan_settings`: Virtual WAN使用時の設定（通常は空）
+- `private_link_private_dns_zone_virtual_network_link_moved_blocks_enabled`: 後方互換性フラグ
 
 ### terraform.tf
 
@@ -214,6 +270,14 @@ terraform {
       source  = "hashicorp/azurerm"
       version = "~> 4.0"
     }
+    azapi = {
+      source  = "Azure/azapi"
+      version = "~> 2.0"
+    }
+    local = {
+      source  = "hashicorp/local"
+      version = "~> 2.5"
+    }
   }
   
   backend "azurerm" {}
@@ -227,7 +291,13 @@ required_version = "~> 1.12"
 Terraform 1.12.x じゃないと動かない宣言。
 
 #### required_providers
+
 使うプロバイダーのバージョン指定。
+
+**alz**: Azure Landing Zones専用プロバイダー（管理グループ・ポリシー管理）  
+**azurerm**: Azure Resource Manager（Azureのメインプロバイダー）  
+**azapi**: Azure API直接叩く用（azurermでできないことに使う）  
+**local**: ローカルファイル操作用（設定ファイルの読み書き）
 
 **なぜ`~> 4.0`？**
 
