fix: メールアドレスをダミーに変更

--- a/docs-site/docs/02_プロジェクト構造.md
+++ b/docs-site/docs/02_プロジェクト構造.md
@@ -174,7 +174,7 @@ You can define custom replacements to use throughout the configuration.
 custom_replacements = {
   names = {
     # Defender email security contact
-    defender_email_security_contact = "shuhei_0720@icloud.com"
+    defender_email_security_contact = "security@example.com"
 
     # Resource group names
     management_resource_group_name                 = "rg-management-$${starter_location_01}"
