fix: terraform.tfvars.jsonの説明をファイル記載順に並び替え

--- a/docs-site/docs/02_プロジェクト構造.md
+++ b/docs-site/docs/02_プロジェクト構造.md
@@ -241,18 +241,20 @@ custom_replacements = {
 - 複数の設定を1つのファイルにまとめられる
 
 
-**主要な設定項目：**
+**主要な設定項目（ファイル記載順）：**
 
-- `subscription_ids`: 新形式のサブスクリプションID指定（map形式）
-- `subscription_id_*`: 旧形式（後方互換性のため残っている、通常はnull）
-- `root_parent_management_group_id`: 管理グループ階層の親となるMG ID
-- `management_groups_enabled`: 管理グループを作成するか（true/false）
-- `management_resources_enabled`: 管理リソース（Log Analyticsなど）を作成するか
-- `starter_locations_short`: リージョンの短縮名をカスタマイズする場合（通常は空）
-- `connectivity_tags`: 接続リソース用の追加タグ（通常はnull）
-- `virtual_hubs`: Virtual WAN使用時のHub設定（通常は空）
-- `virtual_wan_settings`: Virtual WAN使用時の設定（通常は空）
-- `private_link_private_dns_zone_virtual_network_link_moved_blocks_enabled`: 後方互換性フラグ
+1. `connectivity_tags`: 接続リソース用の追加タグ（通常はnull）
+2. `management_groups_enabled`: 管理グループを作成するか（true/false）
+3. `management_resources_enabled`: 管理リソース（Log Analyticsなど）を作成するか
+4. `private_link_private_dns_zone_virtual_network_link_moved_blocks_enabled`: 後方互換性フラグ
+5. `root_parent_management_group_id`: 管理グループ階層の親となるMG ID
+6. `starter_locations_short`: リージョンの短縮名をカスタマイズする場合（通常は空）
+7. `subscription_id_connectivity`: 旧形式（後方互換性のため残っている、通常はnull）
+8. `subscription_id_identity`: 旧形式（後方互換性のため残っている、通常はnull）
+9. `subscription_id_management`: 旧形式（後方互換性のため残っている、通常はnull）
+10. `subscription_ids`: **新形式のサブスクリプションID指定（map形式）** ← これを使う
+11. `virtual_hubs`: Virtual WAN使用時のHub設定（通常は空）
+12. `virtual_wan_settings`: Virtual WAN使用時の設定（通常は空）
 
 ### terraform.tf
 
