fix: object型の例を実際の変数定義に修正

--- a/docs-site/docs/02_プロジェクト構造.md
+++ b/docs-site/docs/02_プロジェクト構造.md
@@ -426,24 +426,22 @@ subscription_ids = {
 
 キーと値のペア。JavaScriptのオブジェクトみたいなもの。
 
-**validation（バリデーション）**:
-
-- 全てのIDがGUID形式か検証
-- キーは`management`, `connectivity`, `identity`, `security`のいずれかのみ許可
 
 #### object型
 
 ```hcl
-custom_replacements = {
-  names = {
-    firewall_name = "fw-hub"
+variable "custom_replacements" {
+  type = object({
+    names                      = optional(map(string), {})
+    resource_group_identifiers = optional(map(string), {})
+    resource_identifiers       = optional(map(string), {})
+  })
+  default = {
+    names                      = {}
+    resource_group_identifiers = {}
+    resource_identifiers       = {}
   }
-  resource_group_identifiers = {
-    # ...
-  }
-  resource_identifiers = {
-    # ...
-  }
+  description = "Custom replacements"
 }
 ```
 
