fix: variables.connectivity.tfとvariables.moved.tfを実際のファイル内容に修正

--- a/docs-site/docs/02_プロジェクト構造.md
+++ b/docs-site/docs/02_プロジェクト構造.md
@@ -424,7 +424,7 @@ subscription_ids = {
 }
 ```
 
-キーと値のペア。JavaScriptのオブジェクトみたいなもの。
+キーと値のペア。JavaScriptのオブジェクトみたいなものだけど配列に近い。
 
 
 #### object型
@@ -463,25 +463,52 @@ names = optional(map(string), {})
 **編集**: ❌ 触らない  
 **重要度**: ★★☆☆☆
 
-```hcl
-variable "hub_and_spoke_vnet_settings" {
-  type = object({
-    enabled = bool
-    primary = object({
-      # ... 複雑な構造 ...
-    })
-    secondary = object({
-      # ... 複雑な構造 ...
-    })
-  })
-  description = "Hub and spoke network settings"
+```hcl title="variables.connectivity.tf"
+variable "connectivity_type" {
+  type        = string
+  description = "The type of network connectivity technology to use for the private DNS zones"
+  default     = "hub_and_spoke_vnet"
+  validation {
+    condition     = contains(values(local.const.connectivity), var.connectivity_type)
+    error_message = "The connectivity type must be either 'hub_and_spoke_vnet', 'virtual_wan' or 'none'"
+  }
+}
+
+variable "connectivity_resource_groups" {
+  type = map(object({
+    name     = string
+    location = string
+    tags     = optional(map(string))
+    settings = optional(any)
+  }))
+  default     = {}
+  description = <<DESCRIPTION
+A map of resource groups to create. These must be created before the connectivity module is applied.
+
+The following attributes are supported:
+
+  - name: The name of the resource group
+  - location: The location of the resource group
+  - settings: (Optional) An object, which can include an `enabled` setting value that indicates whether the resource group should be created.
+
+DESCRIPTION
+}
+
+variable "connectivity_tags" {
+  type        = map(string)
   default     = null
+  description = "(Optional) Tags of the connectivity resources."
 }
 ```
 
+**ポイント:**
+
+- `connectivity_type`: "hub_and_spoke_vnet", "virtual_wan", "none"の3択
+- `connectivity_resource_groups`: 接続用リソースグループの定義
+- `connectivity_tags`: 接続リソース用のタグ
+
 **なぜファイルを分けてる？**
 
-- 1ファイルだと長すぎる（1000行超える）
 - 役割ごとに分けた方が見やすい
 - ネットワーク担当者は`variables.connectivity.tf`だけ見ればいい
 
@@ -491,12 +518,19 @@ variable "hub_and_spoke_vnet_settings" {
 **編集**: ❌ 絶対触らない  
 **重要度**: ★☆☆☆☆
 
-```hcl
-moved {
-  from = var.old_variable_name
-  to   = var.new_variable_name
+```hcl title="variables.moved.tf"
+variable "private_link_private_dns_zone_virtual_network_link_moved_blocks_enabled" {
+  description = <<DESCRIPTION
+Enable or disable the creation of Private Link Private DNS Zone Virtual Network Link moved blocks.
+
+NOTE: This is a temporary variable to support migration to the new module and will be moved in the next major version.
+DESCRIPTION
+  type        = bool
+  default     = false
 }
 ```
+
+マイグレーション用の一時的な変数。次のメジャーバージョンで削除予定。
 
 変数名が変わったとき、古い名前でも動くようにするおまじない。  
 普通は気にしなくていいです。
