feat: Chapter 03 Part 5にenable_telemetryの説明を追加

--- a/docs-site/docs/03_設定ファイル完全解説.md
+++ b/docs-site/docs/03_設定ファイル完全解説.md
@@ -499,9 +499,11 @@ Azureの推奨命名規則に従ってるから、そのまま使えばOK。
 ```
 
 **auto_registration_zone とは？**
+
 VM（仮想マシン）が起動すると、自動的にこのDNSゾーンにホスト名が登録されます。
 
 **なぜリージョンごとに分ける？**
+
 - `japaneast.azure.local`
 - `japanwest.azure.local`
 
@@ -587,14 +589,14 @@ CIDR表記の読み方:
 │  └─ 10.0.0.192/26  [Firewall Mgmt Subnet]     64個
 │
 └─ 10.0.4.0〜10.0.255.255（残り: 64,512個）
-   └─ Spoke VNet用に予約（将来の拡張用）
+   └─ 将来の拡張用に予約
 ```
 
 **表形式でも見てみましょう**
 
 | 用途 | CIDR | IP範囲 | 使える数 |
 |------|------|--------|----------|
-| Regional全体 | `10.0.0.0/16` | 10.0.0.0 - 10.0.255.255 | 65,536個 |
+| 全体 | `10.0.0.0/16` | 10.0.0.0 - 10.0.255.255 | 65,536個 |
 | Hub VNet | `10.0.0.0/22` | 10.0.0.0 - 10.0.3.255 | 1,024個 |
 | Firewall | `10.0.0.0/26` | 10.0.0.0 - 10.0.0.63 | 64個 |
 | Firewall Management | `10.0.0.192/26` | 10.0.0.192 - 10.0.0.255 | 64個 |
@@ -603,8 +605,9 @@ CIDR表記の読み方:
 | DNS Resolver | `10.0.0.160/28` | 10.0.0.160 - 10.0.0.175 | 16個 |
 
 **🎯 設計のポイント**
+
 - Hub VNetは`10.0.0.0/22`（1,024個）だけ使う
-- 残りの64,512個はSpoke VNet用に予約
+- 残りの64,512個は拡張用に予約
 - 各Subnetが重ならないように慎重に設計されている
 - Firewallが2つ（本体+管理用）あることに注目
 
@@ -642,6 +645,7 @@ CIDR表記の読み方:
 ```
 
 **これは何？**
+
 リソースグループのフルパス（完全なID）を作ってる。
 
 **形式**
@@ -650,6 +654,7 @@ CIDR表記の読み方:
 ```
 
 **なぜ必要？**
+
 後で他のリソースから参照する時に使う。
 例えば、「このLog AnalyticsはどのRGにある？」って聞かれた時に、このIDで答える。
 
@@ -669,6 +674,7 @@ CIDR表記の読み方:
 ```
 
 **これは何？**
+
 個別のリソースのフルパス（Resource ID）を作ってる。
 
 **形式**
@@ -685,13 +691,48 @@ CIDR表記の読み方:
 
 ---
 
+### テレメトリー設定
+
+```hcl title="enable_telemetry"
+enable_telemetry = true
+```
+
+**テレメトリーとは？**
+
+Microsoftにモジュールの利用状況（どのモジュールがどのくらい使われているか）を匿名で送信する機能です。
+
+**何が送信される？**
+
+- 使用しているモジュールのバージョン
+- リージョン情報
+- リソースの種類
+
+**個人情報は送信される？**
+
+いいえ。サブスクリプションID、リソース名、設定値などは一切送信されません。
+
+**なぜデフォルトで有効？**
+
+Microsoftがモジュールの改善に使うデータを収集するためです。  
+オープンソースプロジェクトの維持に役立ちます。
+
+**無効にしたい場合:**
+
+```hcl
+enable_telemetry = false
+```
+
+企業ポリシーで外部への通信が制限されている場合は、`false`にしてください。
+
+---
+
 ## ☕ 休憩タイム（2回目）
 
 **半分まで来ました！ここまでで学んだこと**：
 
 ✅ ネットワークのIPアドレス設定（Part 3）  
 ✅ リソースグループ識別子（Part 4）  
-✅ リソース識別子（Part 5）
+✅ リソース識別子（Part 5）  
 
 **今から学ぶこと**：
 
