fix: Chapter 03の手動修正をコミット

--- a/docs-site/docs/03_設定ファイル完全解説.md
+++ b/docs-site/docs/03_設定ファイル完全解説.md
@@ -580,7 +580,7 @@ CIDR表記の読み方:
 **📊 IPアドレスの全体像（視覚化）**
 
 ```
-10.0.0.0/16（Regional全体: 65,536個のIPアドレス）
+10.0.0.0/16（リージョン全体: 65,536個のIPアドレス）
 ├─ 10.0.0.0/22（Hub VNet: 1,024個）
 │  ├─ 10.0.0.0/26    [Firewall Subnet]          64個
 │  ├─ 10.0.0.64/26   [Bastion Subnet]           64個
@@ -589,14 +589,14 @@ CIDR表記の読み方:
 │  └─ 10.0.0.192/26  [Firewall Mgmt Subnet]     64個
 │
 └─ 10.0.4.0〜10.0.255.255（残り: 64,512個）
-   └─ 将来の拡張用に予約
+   └─ リージョン内のSpokeに予約
 ```
 
 **表形式でも見てみましょう**
 
 | 用途 | CIDR | IP範囲 | 使える数 |
 |------|------|--------|----------|
-| 全体 | `10.0.0.0/16` | 10.0.0.0 - 10.0.255.255 | 65,536個 |
+| リージョン全体 | `10.0.0.0/16` | 10.0.0.0 - 10.0.255.255 | 65,536個 |
 | Hub VNet | `10.0.0.0/22` | 10.0.0.0 - 10.0.3.255 | 1,024個 |
 | Firewall | `10.0.0.0/26` | 10.0.0.0 - 10.0.0.63 | 64個 |
 | Firewall Management | `10.0.0.192/26` | 10.0.0.192 - 10.0.0.255 | 64個 |
@@ -607,7 +607,7 @@ CIDR表記の読み方:
 **🎯 設計のポイント**
 
 - Hub VNetは`10.0.0.0/22`（1,024個）だけ使う
-- 残りの64,512個は拡張用に予約
+- 残りの64,512個はリージョン内のSpoke用に予約
 - 各Subnetが重ならないように慎重に設計されている
 - Firewallが2つ（本体+管理用）あることに注目
 
@@ -754,9 +754,11 @@ tags = {
 ```
 
 **これは何？**
+
 全てのリソースに付けるタグ（メタデータ）。
 
 **タグの使い道**
+
 - コスト管理：「Terraformで作ったリソースのコストは？」
 - 検索：「ALZで作ったリソース一覧を出して」
 - 自動化：「terraformタグがついてるやつだけバックアップ」
@@ -804,6 +806,7 @@ management_resource_settings = {
 ```
 
 **これは何？**
+
 Log Analyticsなど、監視系のリソースをまとめて設定しています。
 
 **enabled = true** にすると：
@@ -926,6 +929,7 @@ root
 ```
 
 **これは何？**
+
 Microsoft Defender for Cloud（セキュリティ監視）の設定。
 
 **DeployIfNotExists** = 「もし有効じゃなかったら、自動で有効にする」
@@ -966,6 +970,7 @@ connectivity_type = "hub_and_spoke_vnet"
 ```
 
 **選択肢**
+
 - `"hub_and_spoke_vnet"`：Hub-and-Spoke構成（一般的）
 - `"virtual_wan"`：Virtual WAN構成（大規模向け）
 - `"none"`：ネットワーク作らない
@@ -1008,6 +1013,7 @@ connectivity_resource_groups = {
 ```
 
 **これは何？**
+
 ネットワーク用のリソースグループを4つ作ってる：
 1. **ddos**：DDoS Protection用
 2. **vnet_primary**：プライマリHub用
@@ -1037,6 +1043,7 @@ hub_virtual_networks = {
 ```
 
 **enabled_resources**
+
 さっきPart 2で設定した有効/無効フラグがここで使われる。
 
 #### VNet設定
@@ -1053,6 +1060,7 @@ hub_virtual_networks = {
 ```
 
 **address_space vs routing_address_space**
+
 - `address_space`：VNet実際のIP範囲（`10.0.0.0/22`）
 - `routing_address_space`：ルーティングで広告する範囲（`10.0.0.0/16`）
 
@@ -1080,10 +1088,9 @@ hub_virtual_networks = {
 ```
 
 Firewallには2つのPublic IPが必要：
-1. **default_ip_configuration**：トラフィック用
-2. **management_ip_configuration**：管理用（Basic SKU
 
-で必要）
+1. **default_ip_configuration**：トラフィック用
+2. **management_ip_configuration**：管理用（Basic SKUで必要）
 
 #### VPN/ExpressRoute Gateway設定
 
