feat: Chapter 03にPrivate DNSゾーンとResolverの説明を追加

--- a/docs-site/docs/03_設定ファイル完全解説.md
+++ b/docs-site/docs/03_設定ファイル完全解説.md
@@ -1085,6 +1085,9 @@ hub_virtual_networks = {
         }
       }
     }
+    firewall_policy = {
+      name = "$${primary_firewall_policy_name}"
+    }
 ```
 
 Firewallには2つのPublic IPが必要：
@@ -1129,6 +1132,75 @@ Firewallには2つのPublic IPが必要：
 VPN GatewayはActive-Active（2台構成）になってる。
 ExpressRouteは1台だけ。
 
+#### Private DNS Zones設定
+
+```hcl title="Private DNSゾーン設定"
+    private_dns_zones = {
+      parent_id = "$${dns_resource_group_id}"
+      private_link_private_dns_zones_regex_filter = {
+        enabled = false
+      }
+      auto_registration_zone_enabled = "$${primary_private_dns_auto_registration_zone_enabled}"
+      auto_registration_zone_name    = "$${primary_auto_registration_zone_name}"
+    }
+```
+
+**Private DNS Zonesとは？**
+
+Azure内部でのみ使える名前解決（DNS）の仕組みです。
+
+**主な用途:**
+
+1. **Private Link用のDNSゾーン**: Azure Storage、SQL Database等のPrivate Endpointの名前解決
+2. **自動登録ゾーン**: VMが起動すると自動的にホスト名が登録される
+
+**private_link_private_dns_zones_regex_filter.enabled**
+```hcl
+enabled = false
+```
+
+- `false`: すべてのPrivate Link用DNSゾーンを作成
+- `true`: 正規表現でフィルタリングして一部のみ作成
+
+通常は`false`（全部作成）でOKです。
+
+**auto_registration_zone**
+```hcl
+auto_registration_zone_enabled = "$${primary_private_dns_auto_registration_zone_enabled}"
+auto_registration_zone_name    = "$${primary_auto_registration_zone_name}"
+```
+
+- VMが起動すると、自動的に`japaneast.azure.local`に登録される
+- 他のVMから`vm-app01.japaneast.azure.local`で名前解決できる
+
+#### Private DNS Resolver設定
+
+```hcl title="Private DNS Resolver設定"
+    private_dns_resolver = {
+      subnet_address_prefix = "$${primary_private_dns_resolver_subnet_address_prefix}"
+      name                  = "$${primary_private_dns_resolver_name}"
+    }
+```
+
+**Private DNS Resolverとは？**
+
+オンプレミスとAzure間でDNS解決を可能にするサービスです。
+
+**使用例:**
+
+- オンプレ → Azure: オンプレのサーバーがAzure内のVMを名前で解決
+- Azure → オンプレ: Azure内のVMがオンプレのサーバーを名前で解決
+
+**なぜ必要？**
+
+従来のVPN経由のDNS転送よりも、高速で安定したDNS解決ができます。
+
+**コスト:**
+
+- 約¥8,000/月 + クエリ課金
+
+オンプレ接続がない環境では無効化してコスト削減できます。
+
 #### Bastion設定
 
 ```hcl title="Azure Bastion設定"
@@ -1153,11 +1225,14 @@ Japan EastはAvailability Zonesに対応していないため`[]`に設定して
 
 ---
 
+あとはセカンダリの設定も同じようにあります。
+
 ## まとめ
 
 お疲れ様でした！platform-landing-zone.auto.tfvarsの全体を見てきました。
 
 **長かったですが、パターンは3つだけです**：
+
 1. **名前の定義**（`names`セクション）
 2. **有効/無効の設定**（`xxx_enabled`）
 3. **実際のリソース設定**（各セクション）
@@ -1166,7 +1241,6 @@ Japan EastはAvailability Zonesに対応していないため`[]`に設定して
 
 - リージョンは`starter_locations`で決まります
 - 有効/無効は`xxx_enabled = true/false`で設定します
-- Japan Eastは`zones = []`が必須です
 - コスト削減したいならFirewall、VPN、Bastionを`false`に設定します
 
 ---
