fix: Chapter 04の手動修正をコミット

--- a/docs-site/docs/04_変数定義.md
+++ b/docs-site/docs/04_変数定義.md
@@ -193,6 +193,7 @@ DESCRIPTION
 ```
 
 **これは何？**
+
 リージョンの短縮コードを手動で指定したい時に使う。
 
 **デフォルト動作**：
@@ -236,6 +237,7 @@ variable "subscription_ids" {
 ```
 
 **type = map(string)**
+
 キーと値のペア。
 
 **使い方**：
@@ -342,6 +344,7 @@ variable "root_parent_management_group_id" {
 ```
 
 **これは何？**
+
 Landing Zonesの管理グループ階層を、どこにぶら下げるか。
 
 **デフォルト**（`""`）：
@@ -376,6 +379,7 @@ variable "enable_telemetry" {
 ```
 
 **これは何？**
+
 Microsoftに使用状況データを送るかどうか。
 
 **true**：匿名データを送る（デフォルト）
@@ -407,9 +411,11 @@ variable "custom_replacements" {
 ```
 
 **型が複雑！**
+
 `object`型で、中に3つの`map(string)`が入ってる。
 
 **object型とは？**
+
 JavaScriptのオブジェクトみたいなやつ。
 
 ```hcl title="custom_replacementsの使用例"
@@ -454,6 +460,7 @@ variable "tags" {
 ```
 
 **型**：`map(string)`（キーと値のペア）
+
 **デフォルト**：`null`（何も指定しなければタグなし）
 
 **使い方**：
@@ -681,6 +688,7 @@ resource "azurerm_firewall" "example" {
 ## まとめ
 
 **variables.tfの役割**：
+
 1. **型定義**：どんなデータ型か
 2. **バリデーション**：間違った値をチェック
 3. **デフォルト値**：省略時の初期値
@@ -756,7 +764,7 @@ variable "description" {
 `optional(string, "")`とすることで、省略時に空文字列がデフォルトになります。
 
 ### 答え3
-**リージョンが`japaneast`または`japanwest`のみ許可されることをチェック**しています。
+リージョンが`japaneast`または`japanwest`のみ許可されることをチェックしています。
 
 `contains(list, value)`で、リストに値が含まれているか確認します。
 含まれていない場合は、`error_message`が表示されます。
